  * [DEV] Documentation de 'inist docker install'
  * [DEV] Commit -- 14/11/2016 @ 09:12:00
  * [DEV] Correction : bug sur la persistance des options pour
    shell/system + bug d'affichage du status pour shell/system
  * [DEV] Ajout d'une valeur par défaut à vide pour DOCKER_OPTS_CUSTOM
  * [DEV] Correction de nombreux bugs dans docker-install + démasquage
    des logs d'installation pour analyse
  * [DEV] Ajout de la version 'latest' à chaque publication d'un nouveau
    package pour faciliter le téléchargement depuis la doc dans github
  * [DEV] Commit -- 18/11/2016 @ 09:03:22
  * [DEV] Correction du bug 'id' dans env-create.sh
  * [DEV] Correction d'un bug d'information sur l'installation de lsb-
    release pour Debian
  * [DEV] Correction du bug #latest
  * [DEV] Correction du bug #latest #2
  * [DEV] Bug sur l'évaluation de la version du kernel dans docker-
    install
  * [DEV] Un exit mal placé...
  * [DEV] Mise-au-point docker-install #1
  * [DEV] Mise-au-point docker-install #2
  * [DEV] Mise-au-point docker-install #3
  * [DEV] Mise-au-point docker-install #4
  * [DEV] Mise-au-point docker-install #5
  * [DEV] Ajout du lien dans la doc vers la release 'latest'
  * [DEV] Typo dans la doc sur le lien vers la latest
  * [DEV] Correction du bug qui apparaît si le fichier .curlrc n'existe
    pas au moment d'un 'inist off'
  * [DEV] Correction du bug de droit sur le chmod dans _it_std_setEnv()
  * [DEV] Correction du bug sur la commande npm pas assignée
  * [DEV] Suppression du warning concernant le shell à l'ouverture d'une
    console
  * [DEV] Parallélisation des 'inist' on et 'inist off'
  * [DEV] Correction du bug de test de la version de noyau dans docker-
    install
  * [DEV] Correction du bug de test de la version de noyau dans docker-
    install #2
  * [DEV] Amélioration du rendu de la main sur inist on|off et
    suppression du message de parallel

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200